# loan-fairness-prediction

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: data_preprocessing.py  fairness.py  preprocessing.py  train.py
